fixed compatibility issues. and flickering styles.

--- a/dis/index.css
+++ b/dis/index.css
@@ -9,7 +9,8 @@
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: 100;
   font-family: -apple-system,BlinkMacSystemFont, "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 16px; }
+  font-size: 16px;
+  line-height: 1.5; }
 
 body {
   margin: 0;
@@ -42,7 +43,6 @@ a {
 a:focus {
   outline: none !important; }
 
-a > span,
 a > img,
 p > span,
 p > img {
@@ -1890,7 +1890,6 @@ footer .ftItems a {
   color: #887f95;
   font-size: 1.05rem;
   font-weight: 400;
-  border: 0;
   transition: all .35s ease-in-out;
   -webkit-transition: all .35s ease-in-out; }
 
@@ -1899,14 +1898,14 @@ footer .ftItems a {
 .hnItems li:nth-child(2) > a,
 .hnItems li:nth-child(3) > a {
   margin: 0;
-  padding: 7px 0 9px 0; }
+  padding: 8px 0 8px 0; }
 
-.hnItems a:hover > .nav-link {
-  border-bottom-style: solid;
-  border-bottom-width: 1.9px;
-  padding-bottom: 4px;
-  transition-duration: .5s; }
-
+/*.hnItems a:hover > .nav-link {
+    border-bottom-style: solid;
+    border-bottom-width: 1.9px;
+    padding-bottom: 4px;
+    transition-duration: .5s;
+} */
 nav {
   display: flex;
   align-items: center;
@@ -1989,13 +1988,21 @@ nav {
   background: #30a87a;
   transform: translateY(-3px); }
 
-/* Color hover styles of menu individually */
+/* Color hover styles of menu individually, don't ask me why so much repetitions - compatibility issues in Edge and Chrome */
 .hnItems li:first-child > a:hover > .nav-link,
 .hnItems li:first-child > a:focus > .nav-link {
-  border-bottom-color: #fcad26; }
+  border-bottom-color: #fcad26;
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s; }
 
 .hnItems li:nth-child(2) > a:hover > .nav-link,
 .hnItems li:nth-child(2) > a:focus > .nav-link {
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s;
   border-bottom-color: #38c690; }
 
 .hnItems li:nth-child(3) > a > .nav-link,
@@ -2007,11 +2014,15 @@ footer .ftItems li:nth-child(3) > a > .nav-link {
   border: none; }
 
 .hnItems li:nth-child(5) > a {
-  padding: 6px 0 10px; }
+  padding: 8px 0 8px; }
 
-.hnItems li:nth-child(5) > a:hover,
-.hnItems li:nth-child(5) > a:focus {
-  border-bottom-color: #fcad26; }
+.hnItems li:nth-child(5) > a:hover > .nav-link,
+.hnItems li:nth-child(5) > a:focus > .nav-link {
+  border-bottom-color: #fcad26;
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s; }
 
 /* Move search container on child pages to hero like position */
 #search-container.smallSearchContainer {
