--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -44,7 +44,6 @@ footer .ftItems a {
   color: #887f95;
   font-size: 1.05rem;
   font-weight: 400;
-  border: 0;
   transition: all .35s ease-in-out;
   -webkit-transition: all .35s ease-in-out;
 }
@@ -53,15 +52,15 @@ footer .ftItems a {
 .hnItems li:nth-child(2) > a,
 .hnItems li:nth-child(3) > a {
   margin: 0;
-  padding: 7px 0 9px 0;
+  padding: 8px 0 8px 0;
 }
 
-.hnItems a:hover > .nav-link {
+/*.hnItems a:hover > .nav-link {
     border-bottom-style: solid;
     border-bottom-width: 1.9px;
     padding-bottom: 4px;
     transition-duration: .5s;
-}
+} */
 
 nav {
   display: flex;
@@ -153,14 +152,22 @@ nav {
   transform: translateY(-3px);
 }
 
-/* Color hover styles of menu individually */
+/* Color hover styles of menu individually, don't ask me why so much repetitions - compatibility issues in Edge and Chrome */
 .hnItems li:first-child > a:hover > .nav-link,
 .hnItems li:first-child > a:focus > .nav-link {
   border-bottom-color: #fcad26;
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s;
 }
 
 .hnItems li:nth-child(2) > a:hover > .nav-link,
 .hnItems li:nth-child(2) > a:focus > .nav-link {
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s;
   border-bottom-color: #38c690;
 }
 
@@ -168,17 +175,23 @@ nav {
 footer .ftItems li:nth-child(3) > a > .nav-link {
   border-bottom: 1.9px solid #6f42c1;
   padding-bottom: 4px;
+
 }
 .navRightItems li:nth-child(4) > a  > .nav-link {
   border: none;
 }
 
 .hnItems li:nth-child(5) > a {
-  padding: 6px 0 10px;
+  padding: 8px 0 8px;
 }
-.hnItems li:nth-child(5) > a:hover,
-.hnItems li:nth-child(5) > a:focus {
+.hnItems li:nth-child(5) > a:hover > .nav-link,
+.hnItems li:nth-child(5) > a:focus > .nav-link{
   border-bottom-color: #fcad26;
+  border-bottom-style: solid;
+  border-bottom-width: 1.9px;
+  padding-bottom: 4px;
+  transition-duration: .5s;
+
 }
 
 /* Move search container on child pages to hero like position */
