--- a/src/styles/originalHelpdocsStyles.scss
+++ b/src/styles/originalHelpdocsStyles.scss
@@ -13,6 +13,7 @@
   -ms-text-size-adjust: 100;
   font-family: -apple-system,BlinkMacSystemFont, "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
   font-size: 16px;
+  line-height: 1.5;
 
 }
 
@@ -55,7 +56,6 @@ a:focus {
   outline: none !important
 }
 
-a > span,
 a > img,
 p > span,
 p > img {
